# LazyGameEngine

./: CMakeLists.txt  README.md  main.cpp
Empty/: EmptyApplication.cpp
Framework/: CMakeLists.txt
Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  GraphicsManager.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp
